# OB1_self_learning_project

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
courses/: admin.py  models.py  paginations.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py
fixtures/: 01_users.json  02_courses.json
tests/: conftest.py
tests/courses/: test_courses_views.py
tests/users/: test_users.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
